--- a/index.html.html
+++ b/index.html.html
@@ -7,6 +7,7 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body style="margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; background: #f8f8f8;">
+  <!-- Carregamento do modelo GLB -->
   <model-viewer src="https://dasdaeqw.github.io/burger-ar-site/burger_realistic_free.glb" 
                 alt="Hambúrguer 3D" 
                 ar 
